--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "commander": "^4.1.1",
+    "ejs": "^3.0.1",
     "enquirer": "^2.3.4",
+    "express": "^4.17.1",
     "fs-extra": "^8.1.0",
+    "opn": "^6.0.0",
     "replace-in-file": "^5.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "scp": "0.0.3",
+    "socket.io": "^2.3.0",
     "xml-js": "^1.6.11"
   }
 }
