--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "commander": "^4.1.1",
+    "configstore": "^5.0.0",
     "enquirer": "^2.3.4",
     "fs-extra": "^8.1.0",
-    "opn": "^6.0.0",
     "replace-in-file": "^5.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
