--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "totalcross",
+  "name": "@totalcross/totalcross-cli",
   "version": "1.0.0",
   "description": "TotalCross CLI",
   "bin": {
@@ -10,10 +10,11 @@
   },
   "keywords": [
     "TotalCross",
-    "CLI"
+    "CLI",
+    "SDK"
   ],
-  "author": "Allan C.",
-  "license": "ISC",
+  "author": "Allan C., @acmlira",
+  "license": "MIT",
   "dependencies": {
     "child_process": "^1.0.2",
     "commander": "^4.1.1",
