--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Allan C., @acmlira",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^3.0.0",
     "child_process": "^1.0.2",
     "commander": "^4.1.1",
     "configstore": "^5.0.0",
