--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@totalcross/totalcross-cli",
-  "version": "1.1.2",
+  "name": "totalcross-npm-cli",
+  "version": "1.2.0",
   "description": "TotalCross CLI",
   "bin": {
     "totalcross": "./index.js"
@@ -26,7 +26,7 @@
     "replace-in-file": "^5.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
-    "scp": "0.0.3",
+    "scp2": "^0.5.0",
     "totalcross-core-dev": "1.0.4",
     "xml-js": "^1.6.11"
   }
